--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
+    "react-slick": "^0.31.0",
     "rsuite": "^5.83.3",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
